# mqdc

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  main.c  plibsysconfig.h
src/: error.c  main.c
